// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HvDrawer Component allows external props to be added 1`] = `
<WithStyles(HvDrawer)
  disableBackdropClick={false}
  disableEscapeKeyDown={true}
  onClose={[MockFunction]}
  open={true}
>
  HvDrawer Content
</WithStyles(HvDrawer)>
`;

exports[`HvDrawer Component allows external styles to be added 1`] = `
<WithStyles(HvDrawer)
  classes={
    Object {
      "background": "testClassBackground",
      "closeButton": "testClassCloseButton",
      "paper": "testClassPaper",
      "root": "testClassRoot",
    }
  }
  open={true}
>
  HvDrawer Content
</WithStyles(HvDrawer)>
`;

exports[`HvDrawer Component should render correctly if closed 1`] = `
<WithStyles(HvDrawer)
  onClose={[MockFunction]}
  open={false}
>
  HvDrawer Content
</WithStyles(HvDrawer)>
`;

exports[`HvDrawer Component should render correctly if opened 1`] = `
<WithStyles(HvDrawer)
  onClose={[MockFunction]}
  open={true}
>
  HvDrawer Content
</WithStyles(HvDrawer)>
`;

exports[`HvDrawer withStyles should render correctly 1`] = `
<WithStyles(HvDrawer)>
  Drawer Content
</WithStyles(HvDrawer)>
`;
